adding flask web

--- a/Disease Detection.ipynb
+++ b/Disease Detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "77820970",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
+   "id": "cca2504c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from os import listdir\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "badc2aa4",
    "metadata": {},
    "outputs": [
@@ -32,13 +42,13 @@
     }
    ],
    "source": [
-    "directory_root = \"New Plant Diseases Dataset(Augmented)/New Plant Diseases Dataset(Augmented)/train\"\n",
+    "directory_root = \"/home/ankkitsharma/Desktop/freelancer/DeepLearning/Plant/train\"\n",
     "print(len(listdir(directory_root)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "c0bf112f",
    "metadata": {},
    "outputs": [
@@ -1087,22 +1097,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "18447d90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-05-19 22:35:20.898750: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-05-19 22:35:20.898849: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.models import load_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "fec10fa1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-05-19 22:36:05.865665: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-05-19 22:36:05.865787: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-05-19 22:36:05.865871: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (mx): /proc/driver/nvidia/version does not exist\n",
+      "2022-05-19 22:36:05.890394: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
-    "model = load_model('Xception.h5')"
+    "model = load_model('Xception')"
    ]
   },
   {
@@ -1111,23 +1142,39 @@
    "id": "5016ad9b",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0430e851",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "84161b00",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from tensorflow.keras.preprocessing import image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "0ab7360b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img  = image.load_img(\"/home/ankkitsharma/Desktop/freelancer/DeepLearning/test/test/TomatoYellowCurlVirus3.JPG\",target_size=(72,72))"
+    "img  = image.load_img(\"/home/ankkitsharma/Desktop/freelancer/DeepLearning/Plant/Testing Data/test/AppleCedarRust1.JPG\",target_size=(72,72))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "c6032972",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "5da50c0c",
    "metadata": {},
    "outputs": [],
@@ -1147,17 +1194,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "b420109b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Apple___Apple_scab',\n",
+       " 'Apple___Black_rot',\n",
+       " 'Apple___Cedar_apple_rust',\n",
+       " 'Apple___healthy',\n",
+       " 'Blueberry___healthy',\n",
+       " 'Cherry_(including_sour)___Powdery_mildew',\n",
+       " 'Cherry_(including_sour)___healthy',\n",
+       " 'Corn_(maize)___Cercospora_leaf_spot Gray_leaf_spot',\n",
+       " 'Corn_(maize)___Common_rust_',\n",
+       " 'Corn_(maize)___Northern_Leaf_Blight',\n",
+       " 'Corn_(maize)___healthy',\n",
+       " 'Grape___Black_rot',\n",
+       " 'Grape___Esca_(Black_Measles)',\n",
+       " 'Grape___Leaf_blight_(Isariopsis_Leaf_Spot)',\n",
+       " 'Grape___healthy',\n",
+       " 'Orange___Haunglongbing_(Citrus_greening)',\n",
+       " 'Peach___Bacterial_spot',\n",
+       " 'Peach___healthy',\n",
+       " 'Pepper,_bell___Bacterial_spot',\n",
+       " 'Pepper,_bell___healthy',\n",
+       " 'Potato___Early_blight',\n",
+       " 'Potato___Late_blight',\n",
+       " 'Potato___healthy',\n",
+       " 'Raspberry___healthy',\n",
+       " 'Soybean___healthy',\n",
+       " 'Squash___Powdery_mildew',\n",
+       " 'Strawberry___Leaf_scorch',\n",
+       " 'Strawberry___healthy',\n",
+       " 'Tomato___Bacterial_spot',\n",
+       " 'Tomato___Early_blight',\n",
+       " 'Tomato___Late_blight',\n",
+       " 'Tomato___Leaf_Mold',\n",
+       " 'Tomato___Septoria_leaf_spot',\n",
+       " 'Tomato___Spider_mites Two-spotted_spider_mite',\n",
+       " 'Tomato___Target_Spot',\n",
+       " 'Tomato___Tomato_Yellow_Leaf_Curl_Virus',\n",
+       " 'Tomato___Tomato_mosaic_virus',\n",
+       " 'Tomato___healthy']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "class_names = train_data.class_names\n"
+    "class_names = train_data.class_names\n",
+    "class_names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "e54718e5",
    "metadata": {},
    "outputs": [],
@@ -1167,17 +1263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "225da3c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35"
+       "2"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,17 +1284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "38eede60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Tomato___Tomato_Yellow_Leaf_Curl_Virus'"
+       "'Apple___Cedar_apple_rust'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,8 +1305,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "aa302918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2640bebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-05-19 22:42:06.684827: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ram://1fc4f941-bcf3-4f8d-bd4a-5a041987edbe/assets\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['model.pkl']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(model,\"model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c42d10ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.engine.functional.Functional at 0x7f8614dc10d0>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0169f3",
    "metadata": {},
    "outputs": [],
    "source": []
